src/app/windows/web-dev/web-dev.component.css
.title {
    font-family: Segoe-UI;
    color: #FFFFFF;
    font-size: 114pt;
    text-align: center;
}

.dev-container {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    width: 90%;
    gap: 2.5rem;
}

.skillset {
    flex-basis: 35%;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    align-items: center;
    gap: 2rem;
    color: white;
}

.skillset>p {
    font-size: 36pt;
    flex-basis: 100%;
}

.skill-display {
    width: 100%;
    display: flex;
    flex-basis: 30%;
    justify-content: space-between;
    font-size: 24pt;
}

.skill-icon {
    /* height: 120%;
    flex-basis: 18%; */
    flex-basis: 18%;
    /* background-color: blue; */
    background-position: center;
    background-size: contain;
    background-repeat: no-repeat;
}

.js-icon {
    background-image: url(../../../assets/logos/JS_logo.png);
}

.skill-body {
    flex-basis: 79%;
    display: flex;
    flex-direction: column;
    gap: 1.1rem;
}

.skill-text {
    display: flex;
    justify-content: space-between;
}

.skill-bar {
    background-color: #ffffff54;
    height: 0.6rem;
    position: relative;
}

.skill-bar-percent {
    position: absolute;
    left: 0px;
    height: 100%;
    top: 0px;
    /* width: 59%; */
    background: white;
}

.projects-container {
    flex-basis: 45%;
    display: flex;
    flex-direction: column;
    flex-direction: column;
    gap: 4rem;
    color: white;
}

.project-fluff {
    text-align: center;
    font-size: 19pt;
}

.projects {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 1.1rem;
}

.project {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 2rem;
}

.project>p {
    font-size: 23pt;
}

.project-image {
    background: #697176;
    height: 30vh;
    width: 42vh;
    display: flex;
    align-items: center;
}

.project-text {
    display: flex;
    flex-direction: column;
    font-family: Segoe-UI-Italic;
    font-size: 14pt;
    padding: 9px 23px;
    gap: 0.8rem;
}

.desc-and-media {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    text-align: center;
    font-size: 19pt;
}

.desc-and-media > #desc {
    flex-basis: 35%;
    display: flex;
    align-items: center;
}

.desc-and-media > #media {
    flex-basis: 55%;
    height: 48vh;
}

.desc-and-media > #media > :first-child {
    box-shadow: 10px 10px 0 0px #3f3f3f;
}

@media(max-width: 1073px) {
    
}

/* mobile */
@media(max-width: 815px) { 
    
}

